# OpenGL_Attempt3

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Debug.cap  EngineContext.h  FileUtils.h  GraphicsEngine_Attempt3.cpp  GraphicsEngine_Attempt3.sln  GraphicsEngine_Attempt3.vcxproj  GraphicsEngine_Attempt3.vcxproj.filters  Renderable.cpp  Renderable.h  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.h  packages.config  vcpkg.json
Graphics.d6eb919b/Debug/: vc143.idb
Graphics.d6eb919b/x64/Debug/: GraphicsEngine_Attempt3.exe.recipe  GraphicsEngine_Attempt3.ilk  vc143.idb
Graphics.d6eb919b/x64/Debug/Graphics.d6eb919b.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GraphicsEngine_Attempt3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Rendering/: Camera.h  Renderable.cpp  Renderable.h  Scene.h  Shader.cpp  Shader.h  Texture.h  Window.h
Settings/: EngineContext.h
Shaders/: Gouraud.fs  Gouraud.vs  ModelLoading.fs  ModelLoading.vs  ModelLoading_Advanced.fs  Phong_PTN.fs  Phong_PTN.vs  Tutorial.fs  Tutorial.vs
Utilities/: FileUtils.h  FrameTiming.h
